# PyKotor

./: .black  .cursorignore  .cursorrules  .env  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .sourcery.yaml  .style.yapf  2DAMEMORY_COMPREHENSIVE_ANALYSIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  HEADER_PREVIEW.txt  LICENSE  MANIFEST.in  MODULE_DESIGNER_LOAD_OPTIMIZATIONS.md  POWERSHELL.md  PROFILE_ANALYSIS_SUMMARY.md  Pipfile  README.md  README.rd  SAVE_EDITING_PROGRESS.md  TSLPatcher-2DAList-Syntax.md  cspell.json  environment.yml  error.txt  errorlog.txt  fix_ini_comments.py  install_differ.py  install_powershell.sh  install_python_venv.ps1  loggerplus-0.1.3-py3-none-any.whl  main.py  other_references.txt  output.prof  (+27 more)
Libraries/PyKotor/: .env  PyKotor.code-workspace  README.md  pyproject.toml  recommended.txt  requirements.txt  setup.py
Libraries/PyKotor/docs/: installation.md
Libraries/PyKotor/docs/dialogue/: README.md  twine_format.md  twine_format_technical.md  twine_quickstart.md  twine_troubleshooting.md
Libraries/PyKotor/output/: font.txi
Libraries/PyKotor/src/: setup.py
Libraries/PyKotor/src/pykotor/: __init__.py
Libraries/PyKotor/src/tests/: path_setup.py
Libraries/PyKotor/src/utility/: error_handling.py  event_util.py  misc.py  string_util.py  tricks.py
Libraries/PyKotor/tests/tslpatcher/: test_reader.py
Libraries/PyKotorFont/: PyKotorFont.code-workspace  pyproject.toml  requirements.txt  setup.py
Libraries/PyKotorFont/src/tests/: test_txi_tga_font.py
Libraries/PyKotorGL/: .flake8  README.md  pyproject.toml  recommended.txt  requirements.txt  setup.py  verify_no_threading.py
Libraries/PyKotorGL/.git.bak/: FETCH_HEAD  config  index  packed-refs
Libraries/PyKotorGL/examples/: async_loading_example.py
Libraries/PyKotorGL/src/gl/: scene.py
Libraries/PyKotorGL/src/pykotor.gl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Libraries/PyKotorGL/tests/: test_frustrum_culling.py
Tools/BatchPatcher/: BatchPatcher.code-workspace  pyproject.toml  requirements.txt  setup.py
Tools/BatchPatcher/src/: __main__.py
Tools/BatchPatcher/src/batchpatcher/: __main__.py
Tools/BatchPatcher/src/translate/: deepl_scraper.py  language_translator.py
Tools/GUICreator/: pyproject.toml
Tools/GUICreator/src/: __main__.py
Tools/GuiConverter/: README.md  pyproject.toml  setup.py
Tools/GuiConverter/src/gui_converter/: __main__.py
Tools/HoloGenerator/: README.md  pyproject.toml  run_tests.sh  setup_dev.py
Tools/HoloGenerator/src/hologenerator/: __init__.py  __main__.py
Tools/HoloGenerator/web/public/: index.html  manifest.json
Tools/HoloGenerator/web/src/: App.tsx  index.css  index.tsx
Tools/HoloPatcher/: .sourcery.yaml  HoloPatcher.code-workspace  README.md  pyproject.toml  recommended.txt  requirements.txt  setup.py
Tools/HoloPatcher/resources/icons/: patcher_icon_v2.icns
Tools/HoloPatcher/src/: __main__.py  config.py  installlog.txt  tooltip.py  uninstall_mod.py
Tools/HoloPatcher/src/UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Tools/HoloPatcher/src/holopatcher/: __main__.py  app.py  cli.py  config.py  core.py  new_ui_alpha.py  template.html  test.js
Tools/HoloPazaak/: README.md  pyproject.toml  requirements.txt  setup.py
Tools/HoloPazaak/compile/: build.ps1
Tools/HoloPazaak/src/holopazaak/: __main__.py  app.py  config.py  main_app.py  main_init.py  main_settings.py
Tools/HolocronAI/: README.md  install.py  pyproject.toml  requirements.txt  setup.py
Tools/HolocronAI/src/holocron_ai/: __init__.py  __main__.py
Tools/HolocronToolset/: .env  .gitignore  .sourcery.yaml  CONVENTIONS.md  HolocronToolset.code-workspace  README.md  SAVE_EDITOR_IMPLEMENTATION.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
Tools/HolocronToolset/resources/: resources.qrc
Tools/HolocronToolset/src/: HolocronToolset.spec  resources_rc.py
Tools/HolocronToolset/src/HolocronToolset.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Tools/HolocronToolset/src/qt_3d_studio_Holocron_Toolset/: qt_3d_studio_Holocron_Toolset.uia
Tools/HolocronToolset/src/resources/: organize_json_themes.ps1  resources.qrc  resources_rc.py
Tools/HolocronToolset/src/spyder-plugin/: TUTORIAL.rst  setup.py
Tools/HolocronToolset/src/toolset/: __main__.py  alert.uts  config.py  humanf.ltr  humanl.ltr  humanm.ltr  main_app.py  main_app_window.py  main_init.py  main_settings.py  profiler_output.pstat  resources_rc.py  tempscript_52be7d_decompiled.txt  test.gff  test.tpc  test_152unk.git  toolset_profile_20251125_115428.txt  toolset_profile_20251125_192421.txt  toolset_profile_20251125_201021.txt
Tools/HolocronToolset/src/ui/: convertui.py  module.py  stylesheet_resources.py
Tools/HolocronToolset/toolset/: __main__.py  config.py  toolset_update_info.json
Tools/HolocronToolset/toolset/data/: indoorkit.py  indoormap.py  installation.py  me_controls.py
Tools/HolocronToolset/toolset/gui/: editor.py
Tools/HolocronToolset/toolset/help/: introduction4-overrideResources.md  introduction_3-moduleResources.md
Tools/HolocronToolset/toolset/utils/: misc.py  script.py  window.py
Tools/HolocronToolset/ui/: convertui.py
Tools/HolocronToolset/ui/dialogs/: indoor_settings.ui  inventory.ui  load_from_module.ui  save_in_bif.ui  search.ui
Tools/HolocronToolset/ui/editors/: are.ui  jrl.ui  mdl.ui  pth.ui  tlk.ui  tpc.ui  (+3 more)
Tools/KOTORNasher/: CHANGELOG.md  IMPLEMENTATION_NOTES.md  KOTORNasher.code-workspace  PYKOTOR_INTEGRATION.md  QUICKSTART.md  README.md  SUMMARY.md  VERIFICATION.md  pyproject.toml  requirements.txt  setup.py
Tools/KitGenerator/: README.md  pyproject.toml  requirements.txt
Tools/KotorDiff/: INI_GENERATOR_README.md  KotorDiff.code-workspace  README.md  README_CONFIG_GENERATOR.md  WINDOWS_PATH_GUIDE.md  pyproject.toml  recommended.txt  requirements.txt  setup.py  test_dynamic_comparison.py  test_new_features.py  test_simple_comparison.py  test_specific_module.py
Tools/KotorDiff/src/: __main__.py  demo.sh  integration_test.py
(+18183 files in other folders)
