[build-system]
requires = ["setuptools>=67.8.0,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="PyKotor"
version="1.7"
description="Read, modify and write files used by KotOR's game engine."
authors = [{name = "NickHugi"}]
maintainers = [{name = "th3w1zard1", email = "halomastar@gmail.com"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "LGPL-3.0-or-later License"}
keywords = ["kotor", "library", "holocron", "toolset", "pykotor", "editor", "holopatcher", "tslpatcher"]
requires-python = ">= 3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "charset-normalizer>=2.0.0,<3.3.0; python_version<\"3.9\"",
    "charset-normalizer>=2.0.0; python_version>=\"3.9\"",
    "defusedxml>=0.7.1",
    "pycryptodome>=3.23.0",
    "astroid>=3.2.0,<3.5.0; python_version>=\"3.8\"",
    "autoflake>=2.3.1; python_version>=\"3.8\"",
    "iniconfig>=2.1.0; python_version>=\"3.8\"",
    "mypy>=1.0.0,<1.10.0; python_version>=\"3.8\"",
    "mypy-extensions>=1.1.0; python_version>=\"3.8\"",
    "pyflakes>=2.0.0,<3.4.0; python_version>=\"3.8\"",
    "pylint>=2.0.0,<3.3.9; python_version>=\"3.8\"",
    "pytest>=7.0.0,<8.0.0; python_version>=\"3.8\"",
    "pytest-html>=3.0.0,<4.0.0; python_version>=\"3.8\"",
    "pytest-metadata>=2.0.0,<3.0.0; python_version>=\"3.8\"",
    "pytest-xdist>=2.0.0,<3.8.0; python_version>=\"3.8\"",
    "ruff>=0.1.0,<0.4.0; python_version>=\"3.8\"",
    "snakeviz>=2.0.0,<2.2.2; python_version>=\"3.8\"",
    "types-pillow>=10.2.0.20240822; python_version>=\"3.8\"",
    "types-send2trash>=1.8.2.7; python_version>=\"3.8\"",
    "typing-extensions>=4.5.0,<4.9.0; python_version<\"3.9\"",
    "typing-extensions>=4.5.0; python_version>=\"3.9\"",
]
font = [
  "pillow>=9.5; python_implementation == 'CPython'",       # required for TXI/TGA fonts (CPython)
  "pillow>10,<11.1.0; python_implementation == 'PyPy'",    # required for TXI/TGA fonts (PyPy)
]
secure_xml = ["defusedxml~=0.7"]    # secure XML parsing
encodings = ["charset-normalizer>=2.0,<3.4"]  # used for localized string decodings
gl = [
  "django>2.1; os_name != 'nt'",
  "django>2.0; os_name == 'nt'",
  "numpy~=1.22",      # ( might need 1.22.2 )
  "PyOpenGL~=3.1",    # ( might need 3.1.6 )
  "PyGLM>=2.0,<2.8; python_implementation == 'CPython'",  # ( might need 2.5.7 )
]
license = {text = "LGPL-3.0-or-later License"}
keywords = ["kotor", "library", "holo", "patcher", "pykotor", "star", "wars", "knights", "holopatcher", "tslpatcher"]

[tool.poetry]
name = "pykotor-workspace"
version = "1.0.0"
description = "PyKotor Workspace"
authors = ["Benjamin Auquite <halomastar@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pykotor", from = "Libraries/PyKotor/src" },
    { include = "pykotorfont", from = "Libraries/PyKotorFont/src" },
    { include = "pykotorgl", from = "Libraries/PyKotorGL/src" },
    { include = "utility", from = "Libraries/Utility/src" },
]

[tool.poetry.dependencies]
python = "^3.8"
loggerplus = "^0.1.3"
pykotor = { path = "Libraries/PyKotor", develop = true }
utility = { path = "Libraries/Utility", develop = true }
pykotorfont = { path = "Libraries/PyKotorFont", develop = true, optional = true }
pykotorgl = { path = "Libraries/PyKotorGL", develop = true, optional = true }
holocrontoolset = { path = "Tools/HolocronToolset", develop = true, optional = true }
holopatcher = { path = "Tools/HoloPatcher", develop = true, optional = true }
kotor-diff = { path = "Tools/KotorDiff", develop = true, optional = true }
batch-patcher = { path = "Tools/BatchPatcher", develop = true, optional = true }
gui-converter = { path = "Tools/GuiConverter", develop = true, optional = true }

[tool.poetry.extras]
# Individual tool extras
holocrontoolset = ["holocrontoolset"]
holopatcher = ["holopatcher"]
kotor-diff = ["kotor-diff"]
batch-patcher = ["batch-patcher"]
gui-converter = ["gui-converter"]

# Convenience groups
all-tools = ["holocrontoolset", "holopatcher", "kotor-diff", "batch-patcher", "gui-converter"]
all-extensions = ["pykotorfont", "pykotorgl"]

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
pylint = "*"
snakeviz = "*"
autoflake = "*"
pytest = "*"
pytest-xdist = "*"
pytest-html = "*"
pytest-cov = "*"
black = "*"
flake8 = "*"

[project.urls]
homepage = "https://github.com/th3w1zard1/PyKotor"
documentation = "https://github.com/th3w1zard1/PyKotor/blob/master/README.md"
repository = "https://github.com/th3w1zard1/PyKotor.git"
issues = "https://github.com/th3w1zard1/PyKotor/issues"
#Changelog = "https://github.com/th3w1zard1/PyKotor/blob/master/CHANGELOG.md"

[tool.poetry.urls]
homepage = "https://github.com/th3w1zard1/PyKotor"
documentation = "https://github.com/th3w1zard1/PyKotor/blob/master/README.md"
repository = "https://github.com/th3w1zard1/PyKotor.git"
issues = "https://github.com/th3w1zard1/PyKotor/issues"
#Changelog = "https://github.com/th3w1zard1/PyKotor/blob/master/CHANGELOG.md"

########################################################
## define only linter configurations below this point ##
########################################################

[tool.pyright.defineConstant]
PYQT5 = false
PYSIDE2 = false
PYQT6 = true
PYSIDE6 = false

[tool.black]
line-length = 175
skip-magic-trailing-comma = false
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.github
| \.mypy_cache
| \.tox
| \.venv
| venv
| _build
| buck-out
| build
| __pycache__
| dist
| nuitka_dist
| \.history
| \.idea
| \.chat
| \.ruff_cache
| \.trunk
| .mdx
| .mdl
)/
'''

[tool.pyright]
include = ["*.py"]
exclude = ["**/node_modules/**", "**/__pycache__/**", "**/build/**", "**/dist/**", "**/venv/**", "**/__pycache__/**"]
extraPaths = [
    "Libraries/PyKotor/src",
    "Libraries/Utility/src"
]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.8"
analyzeUnannotatedFunctions = true
deprecateTypingAliases = false

[tool.isort]
atomic = true
profile = "black"
line_length = 175
skip_gitignore = true
multi_line_output = 3

[tool.yapf]
column_limit = 175
ALLOW_SPLIT_BEFORE_DEFAULT_OR_NAMED_ASSIGNS = false
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
DISABLE_SPLIT_LIST_WITH_COMMENT = true
INDENT_DICTIONARY_VALUE = true
join_multiple_lines = false
no_spaces_around_selected_binary_operators = "*,/"
split_before_dict_set_generator = true
split_before_expression_after_opening_paren = false
split_complex_comprehension = true
split_penalty_after_opening_bracket = 50
split_penalty_excess_character = 75                 # Lower penalty for going over the column limit
split_penalty_for_added_line_split = 100            # Discourage adding new line splits

[tool.ruff]
line-length = 175

# Enable preview features.
preview = false

fix = true
force-exclude = true
show-fixes = true
output-format = "grouped" # Group violations by containing file.
respect-gitignore = false

src = [
    "Libraries/PyKotor/src",
    "Libraries/PyKotorGL/src",
    "Libraries/PyKotorFont/src",
    "Libraries/Utility/src",
    "Tools/HolocronToolset/src",
    "Tools/BatchPatcher/src",
    "Tools/HoloPatcher/src",
    "Tools/KotorDiff/src",
    "Tools/GuiConverter/src",
    "tests",
]

[tool.ruff.lint]
external = ["V"]
task-tags = ["TODO", "FIXME", "HACK"]
exclude = [".venv", ".venv*"]
unfixable = [
    "F841",
    "ERA001",
    "N815",
    "RUF100", # Unused `noqa` directive
    #"UP035",  # replaces deprecated/outdated imports (we want to support older versions of python in the future)
    #"UP038",  # non-pep604-isinstance (python 3.10 syntax)
]
ignore = [
# The following rules are too strict to be realistically used by ruff:
    "ANN002",   # Checks that function *args arguments have type annotations.
    "ANN003",   # Checks that function **kwargs arguments have type annotations.
    "ANN101",   # Checks that instance method self arguments have type annotations.
    "ANN102",   # Checks that class method cls arguments have type annotations.
    "ANN204",   # Missing return type annotation for special method
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "ARG002",   # Unused method argument: `method`
    "BLE001",   # Do not catch blind exception: `Exception`
    "C901",     # Function is too complex
    "COM812",   # missing-trailing-comma
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D104",     # Missing docstring in public package
    "D105",     # Missing docstring in magic method
    "D107",     # Missing docstring in __init__
    "D205",     # 1 blank line required between summary line and description
    "D401",     # First line of docstring should be in imperative mood
    "D413",     # Missing blank line after last section 'xyz'
    "D417",     # Missing argument description in the docstring for {definition}: {name}
    "EM101",    # Exception must not use a string literal, assign to variable first
    "EM102",    # Exception must not use an f-string literal, assign to variable first
    "ERA001",   # Found commented out code.
    "G004",     # Logging statement uses f'' string.
    "N802",     # Function name `screenToWorld` should be lowercase
    "N806",     # Variable `jumpToOffset` in function should be lowercase
    "N815",     # Variable `var` in class scope should not be mixedCase
    "PERF203",  # `try`-`except` within a loop incurs performance overhead
    "PLC0415",  # `import` should be at the top-level of a file
    "PLR0904",  # Too many public methods
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments to function call (N > 5)
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison, consider replacing X with a constant variable
    "RET504",   # Unnecessary assignment to `varname` before `return` statement
    "RUF100",   # Unused `noqa` directive (non-enabled: `PLC0415`)
    "S101",     # Use of `assert` detected.
    "SIM108",   # Use ternary operator instead of 'if' 'else' block
    "SIM114",   # Combine `if` branches using logical `or` operator
    "T201",     # 'print' detected
    "TD001",    # Invalid TODO tag: `FIXME`
    "TRY003",   # Avoid specifying long messages outside the exception class
#    "D213",     # Multi-line docstring summary should start at the second line
#    "D400",     # First line should end with a period
#    "D403",     # First word of the first line should be capitalized: {} -> {}
#    "D404",     # First word of the docstring should not be "This"
#    "FBT001",   # Boolean positional arg in function definition
#    "FBT002",   # Boolean default value in function definition

# The following are currently violated by the codebase.
#    "D205",     # 1 blank line required between summary line and description
#    "E402",     # Module level import not at top of file
#    "FIX004",   # Line contains HACK, consider resolving the issue
#    "PD901",    # df is a bad variable name. Be kinder to your future self.
#    "PLR2004",  # Magic value used in comparison, consider replacing X with a constant variable
#    "S101",     # Use of assert detected
#    "S314",     # Using `xml` to parse untrusted data is known to be vulnerable to XML attacks; use `defusedxml` equivalents
#    "S605",     # Starting a process with a shell, possible injection detected
#    "SLF001",   # Private member accessed
#
# According to ruff documentation, the following rules should be avoided when using its formatter:
#
#    "W191",     # tab-indentation
#    "E111",     # indentation-with-invalid-multiple
#    "E114",     # indentation-with-invalid-multiple-comment
#    "E117",     # over-indented
#    "D206",     # indent-with-spaces
#    "D300",     # triple-single-quotes
#    "Q000",     # bad-quotes-inline-string
#    "Q001",     # bad-quotes-multiline-string
#    "Q002",     # bad-quotes-docstring
#    "Q003",     # avoidable-escaped-quote
#    "COM812",   # missing-trailing-comma
#    "COM819",   # prohibited-trailing-comma
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = [
    "I002", # from __future__ import annotations
]
"tests/*.py" = ["ALL"]
".github/*py" = ["INP001"]
"__init__.py" = ["I001", "I002", "TID252", "F401"]
"globalsettings.py" = ["I001", "F401"]
"Tools/HolocronToolset/src/toolset/*.py" = [
    "FBT003",
    "N802",
    "N803",
    "N806",
    "A001",
]
"Tools/HolocronToolset/src/toolset/uic/*.py" = ["ALL"]
"resources_rc.py" = ["ALL"]
".mdx" = ["ALL"]
".mdl" = ["ALL"]
"pykotor/resource/formats/ncs/compiler/*.py" = ["ALL"]
"tests/results" = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "list"
parametrize-values-row-type = "list"
parametrize-values-type = "list"                         # default
raises-require-match-for = ["requests.RequestException"]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" # Disallow all relative imports.

[tool.ruff.lint.flake8-type-checking]
# Add quotes around type annotations, if doing so would allow an import to be moved into a type-checking block.
quote-annotations = true                         # Does nothing when from __future__ import annotations is used
exempt-modules = ["typing", "typing_extensions"]
strict = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
case-sensitive = true
force-wrap-aliases = false
combine-as-imports = true
lines-between-types = 1
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.mccabe]
max-complexity = 25

[tool.bandit]
exclude_dirs = ["tests"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 200

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.style]
based_on_style = "google"
split_before_named_assigns = true
split_complex_comprehension = true
split_arguments_when_comma_terminated = true

[tool.pylintrc]
max-line-length = 200

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
